<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/extra_more"
        android:textColor="@color/white"
        android:layout_below="@id/appbar"/>

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browser"
        android:text="@string/share"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/share"
        android:text="@string/connect_with_us"
        android:textColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/phone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <WebView
                android:id="@+id/webView"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>